# agent-core

./: .env.example  .gitignore  Dockerfile  README.md  agent_architecture_v3.docx.md  docker-compose.yml  pyproject.toml
config/: agent_models.json  communication_config.json  mcp_config.json
docs/: 01-roles-and-execution-flow.md  02-replanning-and-memory-contracts.md  03-storage-and-opensearch-schemas.md  04-monitoring-and-observability.md  05-system-boundaries-and-api-contracts.md  06-implementation-checklist.md  07-coding-standards.md  08-scaffold-design-pattern.md  09-adk-component-mapping.md  10-agentic-and-integration-flow-mermaid.md  11-adk-only-migration-checklist.md  README.md
scripts/: bootstrap.sh  e2e_agent_run_diagnose.py  e2e_aws_cost_stdio_check.py  inspect_plan_events.py  list_supported_embedding_models.py  smoke_event_pipeline.py  smoke_read_slack_messages.py  test_skill_server_mcp_connectivity.py
src/agent_core/api/: main.py  schemas.py
src/agent_core/application/: ports.py
src/agent_core/application/services/: execution_flow_service.py  memory_use_case.py  orchestrator.py  plan_validator.py  replan_manager.py  (+3 more)
src/agent_core/domain/: exceptions.py  models.py
src/agent_core/infra/: config.py  logging.py
src/agent_core/prompts/: __init__.py  adk_prompts.py
tests/: test_adk_runtime_scaffold.py  test_api_boundaries.py  test_large_response_handling.py  test_mcp_config_transport.py  test_memory_repository.py  test_opensearch_section_g.py  test_orchestrator.py  test_plan_validator.py  test_redis_event_pipeline.py  test_tool_memory.py
(+25 files in other folders)
